# arcane

./: .gitignore  PLANO_PADRONIZACAO_NGINX.md  README.md  todo.md
archived/btop/: Dockerfile
archived/culab/: Dockerfile  compose.yaml  nginx.conf
archived/jellyfin/: nginx.conf
archived/jupyter/: Dockerfile  compose.yaml
archived/lifelog/: .env.example  Dockerfile  LICENSE  README.md
archived/lifelog/.devcontainer/: devcontainer.json
archived/lifelog/docs/docs/: index.md
archived/paperless/: compose.yaml  nginx.conf
archived/selenium_grid/: compose.yaml
asmodeus/: .env.example  compose.yaml
asmodeus/dns/: .env.example  compose.yaml  dnsmasq.conf  generate-hell.sh  upstream.conf
asmodeus/kopia/: .env.example  compose.yaml  entrypoint.sh  sources.conf
asmodeus/lifelog/: .gitignore  Makefile  compose.yaml  pyproject.toml
asmodeus/lifelog/docs/: mkdocs.yml
asmodeus/lifelog/notebooks/: 0.1_explore.ipynb  0.2_analise.ipynb
asmodeus/nginx/: .env.example  compose.yaml  nginx.conf
asmodeus/nginx/snippets/: proxy_params.conf  proxy_params_webdav.conf
asmodeus/obsidian/: .env.example  apply-tuning.sh  compose.yaml  kopia-entrypoint.sh
asmodeus/obsidian_sync/: compose.yaml
asmodeus/overleaf/: .env.example  compose.yaml  install-texlive.sh  mongo-init.sh  overleaf.env  overleaf.env.example
asmodeus/overleaf/scripts/: entrypoint.sh  texlive-install.sh  texlive-mirror.sh
asmodeus/syncthing/: .env.example  apply-tuning.sh  compose.yaml
asmodeus/taildns/: compose.yaml  dnsmasq.conf  generate-config.sh
asmodeus/webdav/: .env.example  compose.yaml
asmodeus/zotero/: .env.example  Dockerfile  compose.yaml  entrypoint.sh
asmodeus/zotero_webdav/: .env.example  compose.yaml
lilith/: .env.example  .env.global  .env.old  .gitignore  compose.yaml
lilith/.data/: arcane.db
lilith/btop/: btop.conf  compose.yaml
lilith/cuda/: .env.example  .gitignore  Dockerfile.btop  Makefile  README.md  compose.yaml  pyproject.toml
lilith/cuda/.scripts/: bash_options
lilith/cuda/btop/: btop.conf
lilith/cuda/cuda/config/: __init__.py
lilith/cuda/scripts/: init_project.sh
lilith/cuda/tests/: test_placeholder.py
lilith/culab/: .env.example  .gitignore  Dockerfile  compose.yaml  entrypoint.sh
lilith/immich/: .env.example  compose.yaml  compose.yaml.old
lilith/immich/scripts/: dump.sh  restore.sh
lilith/jellyfin/: .env.example  compose.yaml
lilith/jupyter/: Dockerfile  Makefile  compose.yaml  pyproject.toml
lilith/jupyter/myproject/utils/: logging.py
lilith/jupyter/scripts/: init_project.sh
lilith/jupyter/tests/: test_placeholder.py
lilith/nginx/: .env.example  compose.yaml  nginx.conf
lilith/nginx/snippets/: proxy_params.conf  proxy_params_immich.conf
lilith/nginx/www/default_page/: index.html  style.css
lilith/obsidian/: .env.example  compose.yaml
lilith/obsidian_sync/: .env.example  compose.yaml
lilith/ollama/: .env.example  compose.yaml
lilith/overleaf/: compose.yaml  compose.yaml.archived  overleaf.conf
lilith/playground/: .dockerignore  .env.example  Dockerfile  LICENSE  Makefile  README.md  compose.yaml  entrypoint.sh  pyproject.toml
lilith/playground/.devcontainer/: devcontainer.json
lilith/playground/playground/config/: __init__.py  settings.yaml
lilith/playground/scripts/: init_project.sh
lilith/playground/tests/: test_placeholder.py
lilith/syncthing/: .env.example  compose.yaml
lilith/taildns/: .env.example  compose.yaml  dnsmasq.conf
lilith/vibe/: .env.example  .gitignore  README.md  compose.yaml  vibe-init.sh
lilith/vibe-code/: .env.example  Dockerfile  compose.yaml  vibe-init.sh
lilith/vibe/data/user/: bashrc
lilith/vibe/dotfiles/.bashrc.d/: 30-aliases.sh
lilith/vibe/init.d/: 00-init.sh  05-uv.sh  10-ssh.sh  20-claude.sh
lilith/vibecode/: .env.example  README.md  compose.yaml
lilith/vibecode/dotfiles/.bashrc.d/: 00-history.sh  10-options.sh  20-prompt.sh
lilith/vibecode/init.d/: 10-ssh.sh  20-claude.sh
lilith/vibespace/: .env.example  Dockerfile  README.md  compose.yaml  entrypoint.sh
lilith/vibespace/dotfiles/: .bashrc  .gitconfig
lilith/vibespace/dotfiles/.bashrc.d/: 01-path.sh
lilith/vibespace/init.d/: 00-init.sh  05-uv.sh  10-ssh.sh
