[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "lifelog"
version = "0.0.1"
description = "Repository to quantization my life."
authors = [{ name = "Vinícius de Lima Gonçalves" }]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: BSD License",
]

dependencies = [
  "ipython (>=9.6.0,<10.0.0)",
  "jupyterlab (>=4.4.9,<5.0.0)",
  "loguru (>=0.7.3,<0.8.0)",
  "matplotlib (>=3.10.6,<4.0.0)",
  "mkdocs (>=1.6.1,<2.0.0)",
  "notebook (>=7.4.7,<8.0.0)",
  "numpy (>=2.3.3,<3.0.0)",
  "pandas (>=2.3.3,<3.0.0)",
  "pytest (>=8.4.2,<9.0.0)",
  "python-dotenv (>=1.1.1,<2.0.0)",
  "ruff (>=0.13.2,<0.14.0)",
  "scikit-learn (>=1.7.2,<2.0.0)",
  "tqdm (>=4.67.1,<5.0.0)",
  "typer (>=0.19.2,<0.20.0)",
  "retry (>=0.9.2,<0.10.0)",
  "dagster (>=1.11.13,<2.0.0)",
  "dagster-webserver (>=1.11.13,<2.0.0)",
  "ipykernel (>=6.30.1,<7.0.0)",
  "certifi (>=2025.8.3,<2026.0.0)",
  "lxml (>=6.0.2,<7.0.0)",
  "beautifulsoup4 (>=4.14.2,<5.0.0)",
  "eliot (>=1.17.5,<2.0.0)",
  "eliot-tree (>=24.0.0,<25.0.0)",
  "xlrd (>=2.0.2,<3.0.0)",
  "plotly (>=6.3.1,<7.0.0)",
  "dash (>=3.2.0,<4.0.0)",
  "jupyter-dash (>=0.4.2,<0.5.0)",
]

requires-python = "~=3.12.0"

[tool.ruff]
line-length = 100
src = ["lifelog"]
include = ["pyproject.toml", "lifelog/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"] # Add import sorting
unfixable = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["lifelog"]
force-sort-within-sections = true
